--- a/login/css/styles.css
+++ b/login/css/styles.css
@@ -193,3 +193,33 @@ main form .links-container aside .facebook :hover {
     background-color: #1a40f9;
     color: #fff
 }
+
+main form footer {
+    width: 100%;
+    margin-top: 10%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+main form footer hr {
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+}
+
+main form footer span {
+    font-weight: 400;
+    font-size: 0.9em;
+    margin-top: 5%;
+}
+
+mair form a {
+    font-weight: 600;
+    transition: 00.2s ease-in-out;
+}
+
+main form footer a :hover {
+    color: #18acfe;
+}
